--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 		<div class="bd-offcanvas-menu__header">
 			<!--Locales-->
 			<nav class="bd-offcanvas-menu__locales">
-				<a class="active" href="#"> Eng </a>
-				<a href="#"> Fra </a>
-				<a href="#"> Ger </a>
+				<span class="active"> Eng </span>
+				<span> Fra </span>
+				<span> Ger </span>
 			</nav>
 			<!--Menu Burger-->
 			<a class="bd-menu-burger bd-menu-burger--opened js-offcanvas-menu-close" href="#"><svg
@@ -98,7 +98,7 @@
 			<!--Socials-->
 			<div class="bd-offcanvas-menu__socials">
 				<a href="#" target="_blank">Ig.</a><a href="#" target="_blank">Bē.</a><a href="#"
-					target="_blank">Tw.</a><a href="#" target="_blank">In.</a>
+					target="_blank">Tw.</a><a href="https://www.linkedin.com/in/idris-bakare-5007431a8/" target="_blank">In.</a>
 			</div>
 			<!--Copyright-->
 			<div class="bd-offcanvas-menu__copyright">
@@ -115,7 +115,7 @@
 	<!--Fixed Socials-->
 	<div class="bd-fixed-socials">
 		<a href="#" target="_blank">Ig.</a><a href="#" target="_blank">Bē.</a><a href="#" target="_blank">Tw.</a><a
-			href="#" target="_blank">In.</a>
+			href="https://www.linkedin.com/in/idris-bakare-5007431a8/" target="_blank">In.</a>
 	</div>
 	<!--Main-->
 	<main class="bd-main">
@@ -271,14 +271,14 @@
 												<!--Services-->
 												<div class="bd-services">
 													<h5 class="bd-services__title">
-														<a href="#">Web Design</a>
+														<a href="#Portfolio">Web Design</a>
 													</h5>
 													<p class="bd-services__text">
 														When it comes to web design I go deep by 
 														researching about the Brand Niche, Competitor, 
 														Typography, Color, Devices Responsiveness &amp; lot more
 													</p>
-													<a class="bd-services__link bd-link-with-arrow" href="#">
+													<a class="bd-services__link bd-link-with-arrow" href="#Portfolio">
 														<span
 															class="bd-link-with-arrow__text">
 															Discover more
@@ -301,14 +301,14 @@
 												<!--Services-->
 												<div class="bd-services">
 													<h5 class="bd-services__title">
-														<a href="#">Branding</a>
+														<a href="#Portfolio">Branding</a>
 													</h5>
 													<p class="bd-services__text">
 														We use the six (6) Branding Element - Brand Voice, 
 														Brand Identity, Brand Promise, Brand Values, Brand Targeting &amp;
 														Brand Position to make your brand stand out 
 													</p>
-													<a class="bd-services__link bd-link-with-arrow" href="#"><span
+													<a class="bd-services__link bd-link-with-arrow" href="#Portfolio"><span
 															class="bd-link-with-arrow__text">Discover more</span><span
 															class="bd-link-with-arrow__icon">🡒</span></a>
 												</div>
@@ -324,14 +324,14 @@
 												<!--Services-->
 												<div class="bd-services">
 													<h5 class="bd-services__title">
-														<a href="#">Illustration</a>
+														<a href="#Portfolio">Illustration</a>
 													</h5>
 													<p class="bd-services__text">
 													I create illustration by sketching it to drawing it using 
 													the right color, balance, layout, expression, informative, idea or concept
 													to suit what I want to derived 
 													</p>
-													<a class="bd-services__link bd-link-with-arrow" href="#"><span
+													<a class="bd-services__link bd-link-with-arrow" href="#Portfolio"><span
 															class="bd-link-with-arrow__text">Discover more</span><span
 															class="bd-link-with-arrow__icon">🡒</span></a>
 												</div>
@@ -347,7 +347,7 @@
 												<!--Services-->
 												<div class="bd-services">
 													<h5 class="bd-services__title">
-														<a href="#">Digital Art</a>
+														<a href="#Portfolio">Digital Art</a>
 													</h5>
 													<p class="bd-services__text">
 														Everyone loves art. Drawing Digital Art I focus 
@@ -355,7 +355,7 @@
 														of the character (Animal or Person), informative, narraive 
 														and lot more
 													</p>
-													<a class="bd-services__link bd-link-with-arrow" href="#"><span
+													<a class="bd-services__link bd-link-with-arrow" href="#Portfolio"><span
 															class="bd-link-with-arrow__text">Discover more</span><span
 															class="bd-link-with-arrow__icon">🡒</span></a>
 												</div>
@@ -1183,7 +1183,7 @@
 			</div>
 			<!--Testimonials-->
 			<!--Section-->
-			<div class="bd-section pp-scrollable" data-anchor="Testimonials" data-brightness="dark">
+			<div class="bd-section pp-scrollable " data-anchor="Testimonials" data-brightness="dark">
 				<div class="bd-section__vertical-align">
 					<div class="bd-section__content">
 						<!--Ken Burn Effect-->
@@ -1287,7 +1287,7 @@
 										</div>
 									</div>
 									<div class="bd-gap-70"></div>
-									<div class="row justify-content-md-between">
+									<div class="row justify-content-md-between d-none d-lg-flex">
 										<div class="col-md-auto col-sm-4">
 											<!--Animated Block-->
 											<div class="bd-animated-block" style="
@@ -1414,7 +1414,7 @@
 															</div>
 															<h3 class="bd-post-title">
 																<a href="#">
-																	Lorem ipsum dolor sit amet consectetur.
+																	Idris Design Post Title
 																</a>
 															</h3>
 														</header>
@@ -1458,7 +1458,7 @@
 															</div>
 															<h3 class="bd-post-title">
 																<a href="#">
-																	Lorem ipsum dolor sit amet consectetur.
+																	Idris Design Post Title
 																</a>
 															</h3>
 														</header>
@@ -1492,7 +1492,7 @@
 															</div>
 															<h3 class="bd-post-title">
 																<a href="#">
-																	Lorem ipsum dolor sit amet consectetur.
+																	Idris Design Post Title
 																</a>
 															</h3>
 														</header>
@@ -1549,7 +1549,7 @@
 												<i class="bi bi-envelope ps-1"></i>										</a>
 											</span>
 									</div>
-									<div class="bd-gap-70--sm"></div>
+									<div class="bd-gap-70--md"></div>
 								</div>
 								<div class="col-lg-6">
 									<!--Animated Block-->
@@ -1652,6 +1652,8 @@
 	<script src="assets/scripts/bd-plugins.min.js"></script>
 	<script src="assets/scripts/bd-helpers.js"></script>
 	<script src="assets/scripts/bd-controllers.min.js"></script>
+
+	
 </body>
 
 </html>
