--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
 	</script>
 
 	<!--Favicon-->
-	<link rel="icon" type="image/png" href="assets/img/root/plcs1.jpg" />
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="assets/img/favicon/site.webmanifest">
+
 	<!--Framework-->
 	<link rel="stylesheet" href="assets/css/framework/bootstrap.min.css" />
 	<!--Fonts-->
