--- a/index.html
+++ b/index.html
@@ -4,60 +4,100 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Idris Design | UI Engineer</title>
-	<meta name="description" content="Idris Design - I am a Ui Engineer I design web project not only design functional web projects, but I can test those designs, code View Path in MVC Frontend Developerment" />
+	<meta name="description" content="
+		Idris Design - I am a Ui Engineer I design web project
+		not only design functional web projects, but I can test 
+		those designs, code View Path in MVC Frontend Development"
+	>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	
-	<meta name="keywords" content="website, design, top, rated, designer, website, best, united Kingdom, Ui Engineer, User, Interface, Experience, Figma, Web Design, hiring, recruting, freelance, ">
-	<meta name="author" content="Biade Studio">
-	<meta name="publisher" content="Biade Studio">
-	<meta name="copyright" content="Biade Studio">
+	<!-- Meta Tag -->
+	<meta name="description" content="
+		Idris Design - I am a Ui Engineer I design web project
+		not only design functional web projects, but I can test 
+		those designs, code View Path in MVC Frontend Development"
+	>
+	<meta name="author" content="BiadeDigital">
+	<meta name="copyright" content="2022">
+	<meta name="robots" content="index, follow">
+
+	<meta name="keywords" content="
+		website, design, top, rated, designer, website, best, 
+		united Kingdom, Ui Engineer, User, Interface, Experience, 
+		Figma, Web Design, hiring, recruting, freelance, 
+	">
+	<meta name="publisher" content="BiadeDigital">
+	<meta name="copyright" content="BiadeDigital">
 	<meta name="page-topic" content="">
 	<meta name="page-type" content="Personal">
 	<meta name="audience" content="Everyone">
-	<meta name="robots" content="index, follow">
 	<meta name="googlebot" content="index,follow">
 	<meta name="google" content="translate">
 
-	
+	<!-- Open Graph -->
+	<meta property="og:type" content="profile">
+	<meta property="og:title" content="Idris Design">
+	<meta property="og:url" content="https://idris.design">
+	<meta property="og:image" content="https://idris.design/assets/img/meta-pic.png">
+	<meta property="og:description" content="
+		Idris Design - I am a Ui Engineer I design web project
+		not only design functional web projects, but I can test 
+		those designs, code View Path in MVC Frontend Development"
+	>
+	<meta property="profile:first_name" content="Idris">
+	<meta property="profile:last_name" content="Design">
+	<meta property="profile:username" content="Idris.Design">
+
+
+	<!-- Twitter Meta Tag -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:site" content="@Idris.Design">
+	<meta name="twitter:creator" content="@Idris.Design">
+	<meta name="twitter:url" content="https://idris.design/index.html">
+	<meta name="twitter:title" content="Content Title">
+	<meta name="twitter:description" content="
+		Idris Design - I am a Ui Engineer I design web project
+		not only design functional web projects, but I can test 
+		those designs, code View Path in MVC Frontend Development"
+	>
+	<meta name="twitter:image" content="assets/img/meta-pic.png">
+	<meta name="twitter:image:alt" content="Idris Design Logo">
 	
 	<!--  Essential META Tags -->
 	<meta property="og:title" content="Idris Design | UI Engineer">
 	<meta property="og:type" content="website" />
 	<meta property="og:image" content="assets/img/meta-pic.png">
-	<meta property="og:url" content="index.html">
+	<meta property="og:url" content="https://idris.design/index.html">
 	<meta name="twitter:card" content="summary_large_image">
 
 	<!--  Non-Essential, But Recommended -->
-	<meta property="og:description" content="Idris Design - I am a Ui Engineer I design web project not only design functional web projects, but I can test those designs, code View Path in MVC Frontend Developerment">
+	<meta property="og:description" content="twitter:description" content="
+		Idris Design - I am a Ui Engineer I design web project
+		not only design functional web projects, but I can test 
+		those designs, code View Path in MVC Frontend Development"
+	>
 	<meta property="og:site_name" content="Idris Design | UI Engineer">
 	<meta name="twitter:image:alt" content="Meta Pic">
 
 	<!--  Non-Essential, But Required for Analytics -->
-	<meta property="fb:app_id" content="your_app_id" />
-	<meta name="twitter:site" content="@website-username">
+	<meta name="twitter:site" content="@Idris.Design">
 
 	<!-- Facebook Meta tag -->
-	<meta property="fb:app_id" content="123456789">
-	<meta property="og:url" content="index.html">
+	<meta property="og:url" content="https://idris.design/index.html">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Idris Design | UI Engineer">
 	<meta property="og:image" content="assets/img/meta-pic.png">
 	<meta property="og:image:alt" content="Idris Design">
-	<meta property="og:description" content="Idris Design - I am a Ui Engineer I design web project not only design functional web projects, but I can test those designs, code View Path in MVC Frontend Developerment">
+	<meta property="og:description" content="
+		Idris Design - I am a Ui Engineer I design web project
+		not only design functional web projects, but I can test 
+		those designs, code View Path in MVC Frontend Development"
+	>
 	<meta property="og:site_name" content="Idris Design | UI Engineer">
 	<meta property="og:locale" content="en_US">
 	<meta property="article:author" content="Biade_studio">
 
-	<!-- Twitter Meta Tag -->
-	<meta name="twitter:card" content="summary">
-	<meta name="twitter:site" content="@site_account">
-	<meta name="twitter:creator" content="@individual_account">
-	<meta name="twitter:url" content="https://example.com/page.html">
-	<meta name="twitter:title" content="Content Title">
-	<meta name="twitter:description" content="Idris Design - I am a Ui Engineer I design web project not only design functional web projects, but I can test those designs, code View Path in MVC Frontend Developerment">
-	<meta name="twitter:image" content="assets/img/meta-pic.png">
-	<meta name="twitter:image:alt" content="Idris Design">
 
 	<!-- Theme Color -->
 	<meta name="theme-color" content="#000000">
@@ -68,11 +108,40 @@
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-JETWTQRRCX"></script>
 	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
 
-	gtag('config', 'G-JETWTQRRCX');
+		gtag('config', 'G-JETWTQRRCX');
+	</script>
+
+	<!-- Schema Code Person -->
+	<script type="application/ld+json">
+	{
+		"@context": "http://schema.org/",
+		"@type": "WebSite",
+		"url": "https://idris.design",
+		"potentialAction": {
+			"@type": "SearchAction",
+			"target": "idris.design{search_term_string}",
+			"query-input": "required name=search_term_string"
+		}
+	}
+	</script>
+
+	<script type="application/ld+json">
+	{
+		"@context": "http://schema.org/",
+		"@type": "Person",
+		"name": "Idris Bakare",
+		"image": "https://idris.design/assets/img/meta-pic.png",
+		"url": "https://idris.design",
+		"jobTitle": "Ui Engineer",
+		"worksFor": {
+			"@type": "Organization",
+			"name": "Idris Design"
+		}
+	}
 	</script>
 
 	<!--Favicon-->
@@ -1634,7 +1703,7 @@
 											<span class="has-first-color">let's create something iconic together!</span>
 										</h5>
 										<div class="bd-gap-40"></div>
-										<form class="bd-contact-form" novalidate="novalidate" onsubmit="sendForm(); reset(); return false;">
+										<form class="bd-contact-form" novalidate="novalidate" method="post" >
 											<div class="bd-form-row two-col">
 												<div class="bd-form-group">
 													<label class="has-white-color" for="name">Your name
@@ -1680,9 +1749,9 @@
 												
 											</div>
 											<!--Button-->
-											<button class="bd-btn bd-btn--primary">
-												<span class="bd-btn__text">Contact Me</span><span
-													class="bd-btn__icon bd-btn__icon--right"></span>
+											<button class="bd-btn bd-btn--primary" onsubmit="sendForm(); reset(); return false;">
+												<span class="bd-btn__text">Contact Me</span>
+												<span class="bd-btn__icon bd-btn__icon--right"></span>
 											</button>
 										</form>
 									</div>
