--- a/index.html
+++ b/index.html
@@ -1743,10 +1743,10 @@
 													placeholder="Message"></textarea>
 											</div>
 											<div class="message success" id="success">
-												
+												Your message is successfully sent...
 											</div>
 											<div class="message danger" id="danger">
-												
+												Sorry something went wrong!
 											</div>
 											<!--Button-->
 											<button class="bd-btn bd-btn--primary" onsubmit="sendForm(); reset(); return false;">
