--- a/index.html
+++ b/index.html
@@ -117,31 +117,44 @@
 
 	<!-- Schema Code Person -->
 	<script type="application/ld+json">
-	{
-		"@context": "http://schema.org/",
-		"@type": "WebSite",
-		"url": "https://idris.design",
-		"potentialAction": {
-			"@type": "SearchAction",
-			"target": "idris.design{search_term_string}",
-			"query-input": "required name=search_term_string"
+		{
+			"@context": "http://schema.org/",
+			"@type": "WebSite",
+			"url": "https://idris.design",
+			"potentialAction": {
+				"@type": "SearchAction",
+				"target": "idris.design{search_term_string}",
+				"query-input": "required name=search_term_string"
+			}
 		}
-	}
 	</script>
 
 	<script type="application/ld+json">
-	{
-		"@context": "http://schema.org/",
-		"@type": "Person",
-		"name": "Idris Bakare",
-		"image": "https://idris.design/assets/img/meta-pic.png",
-		"url": "https://idris.design",
-		"jobTitle": "Ui Engineer",
-		"worksFor": {
-			"@type": "Organization",
-			"name": "Idris Design"
+		{
+			"@context": "http://schema.org/",
+			"@type": "WebSite",
+			"url": "https://idris.design",
+			"potentialAction": {
+				"@type": "SearchAction",
+				"target": "idris design{search_term_string}",
+				"query-input": "required name=search_term_string"
+			}
 		}
-	}
+	</script>
+
+	<script type="application/ld+json">
+		{
+			"@context": "http://schema.org/",
+			"@type": "Person",
+			"name": "Idris Bakare",
+			"image": "https://idris.design/assets/img/meta-pic.png",
+			"url": "https://idris.design",
+			"jobTitle": "Ui Engineer",
+			"worksFor": {
+				"@type": "Organization",
+				"name": "Idris Design"
+			}
+		}
 	</script>
 
 	<!--Favicon-->
