--- a/index.html
+++ b/index.html
@@ -177,26 +177,7 @@
 	<link rel="stylesheet" href="assets/css/custom.css" />
 
 
-	<script src="assets/scripts/smtp.js"></script>
-	<script  type="text/javascript">
-
-		function sendForm() {
-			Email.send({
-				SecureToken : "accbcfa2-e166-4836-b4a9-b32dd960df7b",
-				To : 'contact@idris.design, info@idris.design',
-				From : document.getElementById("email").value,
-				Subject : "New Message From Idris Design Website!",
-				Body : "Name: " + document.getElementById("name").value +
-				"<br> Email: " + document.getElementById("email").value +
-				"<br> Category: " + document.getElementById("category").value +
-				"<br> Budget: " + document.getElementById("budget").value +
-				"<br> Message: " + document.getElementById("message").value 
-			}).then(
-			message => alert("Your message is successfully sent.")
-			);
-		};
-		
-	</script>
+	
 
 
 </head>
@@ -1831,7 +1812,26 @@
 	<script src="assets/scripts/bd-helpers.js"></script>
 	<script src="assets/scripts/bd-controllers.min.js"></script>
 
+	<script src="assets/scripts/smtp.js"></script>
+	<script  type="text/javascript">
 
+		function sendForm() {
+			Email.send({
+				SecureToken : "accbcfa2-e166-4836-b4a9-b32dd960df7b",
+				To : 'contact@idris.design, info@idris.design, admin@idris.design',
+				From : document.getElementById("email").value,
+				Subject : "New Message From Idris Design Website!",
+				Body : "Name: " + document.getElementById("name").value +
+				"<br> Email: " + document.getElementById("email").value +
+				"<br> Category: " + document.getElementById("category").value +
+				"<br> Budget: " + document.getElementById("budget").value +
+				"<br> Message: " + document.getElementById("message").value 
+			}).then(
+			message => alert("Your message is successfully sent.")
+			);
+		};
+		
+	</script>
 	
 	<!-- <script src="assets/scripts/mail.js"></script> -->
 	
